# obc-lpc4357

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  board.cpp  board.h  board_api.h  board_settings.h  config.h  m4f.uvoptx  m4f.uvprojx  main.cpp  pool_allocator_port.h
DebugConfig/: Target_1_LPC4357_Cortex-M4_1.0.dbgconf
RTE/Device/LPC4357_Cortex-M4/: RTE_Device.h  startup_LPC43xx.s  system_LPC43xx.c
RTE/RTOS/: FreeRTOSConfig.h
RTE/_Target_1/: RTE_Components.h
application/: README.md  data_storage.h  data_storage_config.h  data_storage_config_api.h
cpp_tests/: CMakeLists.txt  mock_board.cpp  mock_board.h  rapidjson.cmake  test.cpp
cpp_tests/data/: add_magn_tme_to_sd_page_input.json  data_storage_magn_seeded_data.json
drivers/: mpu9250_driver.h  pca9554_driver.h  sdhc_driver.h
images/: schema.drawio  sector-filling-cases.drawio
python_tests/: .gitignore  config.py  logging_config.yaml  logging_services.py  parser.py  request.py  requirements.txt  test_drivers.py
rtos_wrapper/: freertos_wrapper.h  rtos.cpp  rtos.h  rtosdefs.h  semphr_wrapper.h  task_wrapper.h
system_abstraction/: board_api.h  data_storage_config.h
tasks/: data_acquisition_task.cpp  data_acquisition_task.h  uart_task.cpp  uart_task.h
wrappers/: i2c_wrapper.h  spi_wrapper.h  uart_wrapper.h
